--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="Titulo">Superpago App</h1> 
+    <br>
+        <img id="logo" src="img/logo.png">
+        <h1 id="titulo"> Superpago App <h1>
+            <br>
+            <br>
+            <img class="img2" src="img/Supermercado2.jpg">
+            <p class="texto-justificado"> Pagar las compras en el supermercado nunca fue tan
+                fácil, con la App de Superpago no tendrá que hacer filas, solo escanea y pague 
+                su compra con el teléfono móvil. </p> 
+                <br>
+                <br> 
+                <br>
+                <div>
+                <h1 id="funcionamiento">¿Cómo funciona?</h1>
+                <p class="primer-paso"> 1. Descargue la app desde la store de su teléfono inteligente, 
+                    la app se encuentra disponible para iOS y Android.<p>
+                <img class="fimg2" src="img/fimg2.png">
+                <p class="segundo-paso"> 2. Abra la aplicación y cree una cuenta 
+                    registrando sus datos personales. <p>
+                <img class="fimg3" src="img/fimg3.png">
+                <p class="tercer-paso"> 3. Eliga el producto y apunte el lector de código de barras
+                    de la aplicación hacia el código del producto para registrarlo en el carrito de compras 
+                    virtual.</p>
+                <img class="fimg4" src="img/fimg4.png">
+                <p class="cuarto-paso"> 4. Cuando haya elegido sus productos, ingrese al carrito de compras
+                    y realice el pago por medio de PSE o Tarjeta Crédito. 
+                </p>
+
 </body>
 </html>
