--- a/index.html
+++ b/index.html
@@ -1,37 +1,163 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Superpago App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+                                    <!--cabecera-->
+    <header>
+        <a href="#" class="logo">
+            <img src="img/Logo.jpg" alt="logo-de-la-app"
+            class="logo-img"> 
+            <h1 class="nombre-app"> Superpago App</h1>
+        </a>
+                                <!--Menu de Navegación -->
+        <nav>
+            <a href="../superpago_landing_page/index.html" class="Inicio"> Inicio</a>
+            <a href="paginas/sobre-la-app.html" class="sobre-la-app"> Sobre la App </a>
+            <a href="paginas/contacto.html" class="contacto"> Contacto</a>
+        </nav>
+    </header>
+        <section>
+            <div class="container">
+                <img src="img/Supermercado1.jpg" alt="imagen-de-supermercado">
+                <p> Si le agrada mercar personalmente pero lo desespera las filas al momento de pagar,
+                    descarga Superpago App.
+                </p>
+            </div>
+        </section>
+                                <!--Enlaces descargar Superpago-->
+        <section>
+            <div class="descargar-app">
+                <h2> Descargar Superpago App</h2>
+                <a href="https://play.google.com/" tarjet="_blank">
+                    <img src="img/google-play.png" class="logo-google-play">     
+                </a> 
+            </div>      
+        </section>
+                                <!--Pie de página-->
+    <footer class="footer">
+        <h2>Más información</h2>
+            <nav>
+                <a href="#" class="aliados">Supermercados Aliados</a>
+                <a href="#" class="terminos-y-condiciones"> Términos y Condiciones</a>
+                <a href="paginas/aviso-de-privacidad.html" class="aviso-de-privacidad"> Aviso de Privacidad</a>
+            </nav>     
+        <h3>Copyright© 2022 - Superpago App</h3>
+    </footer>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<!DOCTYPE html>
 <html>
 <head>
     <title>Superpago App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img id="logo" src="img/logo.png"/>
+    <h1 id="titulo"> Superpago App </h1>
+    <img class="img2" src="img/Supermercado2.jpg">
+    <p class="texto-justificado"> Pagar las compras en el supermercado nunca fue tan
+        fácil, con la App de Superpago no tendrá que hacer filas, solo escanea y pague 
+        su compra con el teléfono móvil.</p> 
     <br>
-        <img id="logo" src="img/logo.png">
-        <h1 id="titulo"> Superpago App <h1>
-            <br>
-            <br>
-            <img class="img2" src="img/Supermercado2.jpg">
-            <p class="texto-justificado"> Pagar las compras en el supermercado nunca fue tan
-                fácil, con la App de Superpago no tendrá que hacer filas, solo escanea y pague 
-                su compra con el teléfono móvil. </p> 
-                <br>
-                <br> 
-                <br>
-                <div>
-                <h1 id="funcionamiento">¿Cómo funciona?</h1>
-                <p class="primer-paso"> 1. Descargue la app desde la store de su teléfono inteligente, 
-                    la app se encuentra disponible para iOS y Android.<p>
-                <img class="fimg2" src="img/fimg2.png">
-                <p class="segundo-paso"> 2. Abra la aplicación y cree una cuenta 
-                    registrando sus datos personales. <p>
-                <img class="fimg3" src="img/fimg3.png">
-                <p class="tercer-paso"> 3. Eliga el producto y apunte el lector de código de barras
-                    de la aplicación hacia el código del producto para registrarlo en el carrito de compras 
-                    virtual.</p>
-                <img class="fimg4" src="img/fimg4.png">
-                <p class="cuarto-paso"> 4. Cuando haya elegido sus productos, ingrese al carrito de compras
-                    y realice el pago por medio de PSE o Tarjeta Crédito. 
-                </p>
-
+    <br> 
+    <br>
+    <h2 id="funcionamiento">¿Cómo funciona?</h2>
+    <div><a class="DescargarPS" href="https://play.google.com/">Descargar en Google Play
+    <!--<img class="GPS" src="img/play store.PNG"></a>
+    <a class="DescargarAS" href="https://apps.apple.com//">Descargar en App Store</a>
+    </div>
+    <img class="fimg1" src="img/fimg1.png">
+    <p class="primer-paso"> 1. Descargue la app desde la store de su teléfono inteligente, 
+        la app se encuentra disponible para iOS y Android.</p>
+    <img class="fimg2" src="img/fimg2.png">
+    <p class="segundo-paso"> 2. Abra la aplicación y cree una cuenta 
+        registrando sus datos personales. </p>
+    <img class="fimg3" src="img/fimg3.png">
+    <p class="tercer-paso"> 3. Eliga el producto y apunte el lector de código de barras
+        de la aplicación hacia el código del producto para registrarlo en el carrito de compras 
+        virtual.</p>
+    <img class="fimg4" src="img/fimg4.png">
+    <p class="cuarto-paso"> 4. Cuando haya elegido sus productos, ingrese al carrito de compras
+        y realice el pago por medio de PSE o Tarjeta Crédito.</p>
+                                      
 </body>
+
 </html>
+-->
